--- a/style.css
+++ b/style.css
@@ -132,6 +132,8 @@ a:hover{
 }
 .section-text-p1
 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:500 ;
     font-size: 100px;
 }
 
@@ -202,5 +204,130 @@ a:hover{
 .btn:hover{
     background-color: greenyellow;
     color: black;
+    cursor:pointer;
     transition: all ease-in 0.3s;
+}
+
+.socials img{
+    margin-top: 20px;
+    height: 70px;
+    cursor: pointer;
+}
+
+.title
+{
+    font-family: poppins;
+    font-size: 10vh;
+    font-weight: 600;
+    padding: 1vh;
+    text-align: center;
+}
+
+.data
+{
+    font-family:'Times New Roman', Times, serif;
+    font-size: 4vh;
+    padding: 2vh;
+    display: flex;
+    gap: 5vh;
+}
+.top{
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    color: grey;
+    font-size: 50px;
+
+
+}
+
+.content-container
+{
+    display: flex;
+    padding: 2vh;
+}
+.image-container img
+{
+    height: 70vh;
+    border-radius: 70px;
+    padding: 20px;
+    border: 4px solid black;
+}
+
+.image-container
+{
+    
+    padding: 50px;
+}
+
+.experience
+{
+  margin-top: 20vh;
+  border:4px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50vh;
+  height: 50vh;
+  border-radius: 20px;
+  padding:2vh;
+}
+.experience p{
+    padding: 10px;
+    margin-top: -20vh;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+}
+.experience ul{
+    margin-left: -20vh;
+    list-style:square;
+}
+.experience img{
+    height:5vh;
+    margin-top: -20vh;
+}
+
+.education
+{
+    margin-top: 5vh;
+    border:4px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70vh;
+    height: 80vh;
+    border-radius: 20px;
+    padding: 5vh;
+    margin-left: 5vh;
+}
+
+
+.education p{
+    padding: 10px;
+    margin-top: -50vh;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    padding-bottom: 5vh;
+}
+.education img{
+    height: 5vh;
+    margin-top: -53vh;
+}
+
+.education ul li{
+    margin-top: 5vh;
+    margin-left: -20vh;
+    list-style:square;
+}
+
+.note{
+    border: 4px solid black;
+    display: flex;
+    font-family: 'Times New Roman', Times, serif;
+    padding: 5vh;
+    margin-left: 7vh;
+    border-radius: 20px;
+    font-size: 4vh;
+    justify-content: center;
+    align-items: center;
+    width: 200vh;
 }
