--- a/style.css
+++ b/style.css
@@ -409,3 +409,96 @@ a:hover{
     margin-left: 6vh;
     display: flex;
 }
+
+.work
+{
+    font-family: poppins;
+    font-size: 7vh;
+    text-align: center;
+    font-weight: 500;
+    
+}
+
+.data-container
+{
+    width: 80vh;
+    margin-left: 4vh;
+    height: 65vh;
+    margin-top: 15vh;
+    padding: 0;
+    display: flex;
+    gap: 15vh;
+    margin-bottom: 15vh;
+}
+
+.grid1
+{
+    font-family: poppins;
+    text-align: center;
+    font-size: 4vh;
+    padding: 3vh;
+}
+
+.grid1 img
+{
+   height: 40vh;
+}
+
+.projects
+{
+    width: 80vh;
+    margin-left: 4vh;
+    height: 65vh;
+    margin-top: 10vh;
+    padding: 0;
+    display: flex;
+    gap: 25vh;
+    margin-bottom: 15vh;
+}
+
+.block1
+{
+    font-family: poppins;
+    text-align: center;
+    font-size: 4vh;
+    padding: 2vh;
+}
+
+.block1:hover{
+    border: 4px solid black;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.block1 img
+{
+   height: 40vh;
+}
+
+.click
+{
+    margin-top: 5vh;
+    padding: 4vh;
+    border-radius: 50px;
+    font-size: 4vh;
+    margin-left: 90vh;
+    border: 2px solid green;
+}
+
+.click:hover{
+    background-color: black;
+    color: white;
+    cursor:pointer;
+    transition: all ease-in 0.3s;
+}
+
+    .projectss {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* Two items per row */
+        gap: 20px; /* Spacing between grid items */
+        padding: 2vh;
+        justify-content: center;
+        align-items: center;
+    }
+    
+
