--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -98,4 +98,23 @@
   margin-top: 60vh;
   margin-left: -1vh;
 }
+
+.info
+{
+  flex-direction: column;
+  margin-top: 100vh;
+}
+.work
+{
+  margin-top: -1vh;
+}
+.block1 {
+  display: grid;
+  grid-template-rows: repeat(auto-fill, 1fr); /* One row per element */
+}
+
+.block1 > * {
+  width: 100%; /* Ensure each child spans the full row */
+}
+
 }
